@@ -1,3 +1,14 @@
+2022-02-01  Tim Nguyen  <ntim@apple.com>
+
+        Add setting to toggle PDF.js viewer
+        https://bugs.webkit.org/show_bug.cgi?id=235972
+
+        Reviewed by Tim Horton.
+
+        This setting is enabled only in CaptivePortalMode.
+
+        * Scripts/Preferences/WebPreferencesInternal.yaml:
+
 2022-02-01  Pablo Saavedra  <psaavedra@igalia.com>
 
         [GTK][WPE] Fixes for non-unified builds after r288807 and r288820
